--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -8,11 +8,11 @@
     android:paddingRight="8dp"
     android:background="?attr/selectableItemBackground">
 
-    <TextView
-        android:id="@+id/author"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"/>
+    <!--<TextView-->
+        <!--android:id="@+id/author"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textSize="20sp"/>-->
 
     <TextView
         android:id="@+id/title"
@@ -26,17 +26,17 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"/>
 
-    <TextView
-        android:id="@+id/url"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"/>
+    <!--<TextView-->
+        <!--android:id="@+id/url"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textSize="14sp"/>-->
 
-    <TextView
-        android:id="@+id/urlToImage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"/>
+    <!--<TextView-->
+        <!--android:id="@+id/urlToImage"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textSize="20sp"/>-->
     <TextView
         android:id="@+id/publishedAt"
         android:layout_width="match_parent"
